--- a/Develop/style.css
+++ b/Develop/style.css
@@ -25,6 +25,10 @@ textarea{
   white-space: pre-wrap;
 }
 
+.time-block-holder{
+  margin: auto;
+}
+
 .time-block{
   text-align: center;
   border-radius: 15px;
@@ -44,17 +48,17 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
